lib_LTLIBRARIES = libgimli.la

include_HEADERS = gimli.h

# 			eameshwrapper.h \
# 			eameshwrapper.cpp 

libgimli_la_SOURCES = \
			kdtree++/AUTHORS \
			kdtree++/COPYING \
			kdtree++/NEWS \
			kdtree++/README \
			kdtree++/VERSION \
			kdtree++/allocator.hpp \
			kdtree++/function.hpp \
			kdtree++/iterator.hpp \
			kdtree++/kdtree.hpp \
			kdtree++/node.hpp \
			kdtree++/region.hpp \
			baseentity.h \
			cholmodWrapper.h \
			cholmodWrapper.cpp \
			curvefitting.h \
			curvefitting.cpp \
			datacontainer.h \
			datacontainer.cpp \
			dc1dmodelling.h \
			dc1dmodelling.cpp \
			elementmatrix.h \
			elementmatrix.cpp \
			em1dmodelling.h \
			em1dmodelling.cpp \
			exitcodes.h \
			expressions.h \
			gimli.h \
			gimli.cpp \
			gravimetry.h \
			gravimetry.cpp \
			integration.h \
			integration.cpp \
			interpolate.h \
			interpolate.cpp \
			inversion.h \
			inversion.cpp \
			inversionBase.h \
			inversionFramework.h \
			ipcClient.h\
			ipcClient.cpp\
			kdtreeWrapper.h \
			kdtreeWrapper.cpp \
			ldlWrapper.h \
			ldlWrapper.cpp \
			line.h \
			line.cpp \
			linSolver.h \
			linSolver.cpp \
			matrix.h \
			matrixTemplates.h \
			mesh.h \
			mesh.cpp \
			mesh_io.cpp \
			meshentities.h \
			meshentities.cpp \
			meshgenerators.h \
			meshgenerators.cpp \
			memwatch.h \
			memwatch.cpp \
			modellingbase.h \
			modellingbase.cpp \
			multimatrix.h \
			multimatrix.cpp \
			node.h \
			node.cpp \
			numericbase.h \
			numericbase.cpp \
			optionmap.h \
			optionmap.cpp \
			plane.h \
			plane.cpp \
			platform.h \
			platform.cpp \
			pos.h \
			pos.cpp \
			quaternion.h \
			quaternion.cpp \
			regionManager.h \
			regionManager.cpp \
			shape.h \
			shape.cpp \
			solver.h \
			solverWrapper.h \
			solverWrapper.cpp \
			sparsematrix.h \
			spline.h \
			spline.cpp \
			stopwatch.h \
			stopwatch.cpp \
			trans.h \
			triangleWrapper.h \
			triangleWrapper.cpp \
			ttdijkstramodelling.h \
			ttdijkstramodelling.cpp \
			vector.h \
			vectortemplates.h

libgimli_la_LDFLAGS= \
	-no-undefined \
	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
	-release $(LT_RELEASE)
 
#libgimli_la_LIBADD = ../external/lib/libtriangle.lib
#libgimli_la_LIBADD = -Wl,-ltriangle

#libgimli_la_LIBADD = ../external/lib/libamd.a \
# 			../external/lib/libcamd.a \
# 			../external/lib/libccolamd.a \
# 			../external/lib/libcholmod.a \
# 			../external/lib/libcolamd.a \
# 			../external/lib/libldl.a \
# 			../external/lib/libtriangle.a