bin_PROGRAMS = 
# 	dc1dinv 
# 	dc1dlong \
# 	dc1dsmooth \
# 	mt1dinv \
# 	mrs1dsmooth \
# 	mrs1dblock

INCLUDES = \
	-I $(top_srcdir)/src

dc1dinv_SOURCES = dc1dinv.cpp
dc1dinv_LDADD = ../../src/.libs/libgimli.la

dc1dlong_SOURCES = dc1dlong.cpp
dc1dlong_LDADD = ../../src/.libs/libgimli.la

dc1dsmooth_SOURCES = dc1dsmooth.cpp
dc1dsmooth_LDADD = ../../src/.libs/libgimli.la

mt1dinv_SOURCES = mt1dinv.cpp
mt1dinv_LDADD = ../../src/.libs/libgimli.la

mrs1dsmooth_SOURCES = mrs1dsmooth.cpp
mrs1dsmooth_LDADD = ../../src/.libs/libgimli.la

mrs1dblock_SOURCES = mrs1dblock.cpp
mrs1dblock_LDADD = ../../src/.libs/libgimli.la

