bin_PROGRAMS = \
 	mt1dinv \
 	mt1dsmooth \
 	mrs1dsmooth \
 	mrs1dblock \
 	fdem1dinv \
 	fdem1dsmooth \
 	dc1dinv \
 	dc1dsmooth
# 	dc1dlong

INCLUDES = \
	-I $(top_srcdir)/src

fdem1dinv_SOURCES = fdem1dinv.cpp
fdem1dinv_LDADD = ../../src/.libs/libgimli.la

fdem1dsmooth_SOURCES = fdem1dsmooth.cpp
fdem1dsmooth_LDADD = ../../src/.libs/libgimli.la

dc1dinv_SOURCES = dc1dinv.cpp
dc1dinv_LDADD = ../../src/.libs/libgimli.la

#dc1dlong_SOURCES = dc1dlong.cpp
#dc1dlong_LDADD = ../../src/.libs/libgimli.la

dc1dsmooth_SOURCES = dc1dsmooth.cpp
dc1dsmooth_LDADD = ../../src/.libs/libgimli.la

mt1dinv_SOURCES = mt1dinv.cpp
mt1dinv_LDADD = ../../src/.libs/libgimli.la

mt1dsmooth_SOURCES = mt1dsmooth.cpp
mt1dsmooth_LDADD = ../../src/.libs/libgimli.la

mrs1dsmooth_SOURCES = mrs1dsmooth.cpp
mrs1dsmooth_LDADD = ../../src/.libs/libgimli.la

mrs1dblock_SOURCES = mrs1dblock.cpp
mrs1dblock_LDADD = ../../src/.libs/libgimli.la

