bin_PROGRAMS = \
	invlinearmat \
	bms2vtk \
	kronmatrix

INCLUDES = -I $(top_srcdir)/src

invlinearmat_SOURCES = invlinearmat.cpp
invlinearmat_LDADD = ../../src/.libs/libgimli.la

bms2vtk_SOURCES = bms2vtk.cpp
bms2vtk_LDADD = ../../src/.libs/libgimli.la

kronmatrix_SOURCES = kronmatrix.cpp
kronmatrix_LDADD = ../../src/.libs/libgimli.la

